[project]
name = "wagtail-exposapi"
version = "0.1.0"
description = "Expose Wagtail internals via a REST API for use while developing and testing Wagtail sites."
authors = [
    {name = "Nick Moreton", email = "nickmoreton@me.com"}
]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 4",
    "Framework :: Wagtail :: 5",
]
requires-python = ">=3.8"
dependencies =[
    "Wagtail>=4.1,<6.0",
    "Django>=3.2,<5.0",
]

[project.optional-dependencies]
development = [
    "black==23.12.1",
    "flake8==7.0.0",
    "isort==5.13.2",
]
testing = [
    "coverage==7.4.1",
]
modeladmin2 = [
    "wagtail-modeladmin>=2.0,<3.0",
]

[tool.setuptools.packages.find]
include = ["exposapi"]
exclude = ["tests*"]
